# TcpServerLib

./: CMakeLists.txt  CMakePresets.json  build_all.bat  vcpkg.json
exampleApp/: main.cpp
inc/: TcpServer.h
src/: TcpServer.cpp
